2003-11-11  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am: 
	- Added README.WIN32 so it will be distributed next release.

2003-10-13  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Bumped version to 0.14.1.99

	* loudmouth/lm-message.c: 
	(lm_message_new): Always set an ID on the message.

2003-10-13  Mikael Hallendal  <micke@imendio.com>
 
	* mono/*: Added first cut at C-sharp bindings that I hacked up a while
	  ago. Can't continue development at the moment since the mono compiler
	  segfaults on my machine at the moment.

	* python/*: Johan Dahlin added a first cut of python bindings, yay him!

2003-10-13  Mikael Hallendal  <micke@imendio.com>

	* NEWS: Updated for 0.14.1
	
	* configure.in: Bumped to 0.14.1
	
	* loudmouth/lm-connection.c: (connection_in_event): check if bytes_read
	  equals GNUTLS_E_AGAIN, fixes crash. Patch by Marinus Schraal.

2003-10-03  Mikael Hallendal  <micke@imendio.com>

        * Release 0.14
	
	* NEWS: Updated for 0.14
	
	* configure.in: Bumped to 0.14
	
2003-10-02  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Free the message handlers and message handler list when free'ing 
	  the connection.

2003-10-01  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Tweaked the --with-ssl option a bit.
	
	* loudmouth.spec.in: 
	- Added a with_ssl to be able to easily turn of GNU Tls support.
	- Fixes LM-14

2003-10-01  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_do_open):
	- Added a patch for IPv6-support submitted by Sjoerd Simons.
	- Sjoerd also seems to know this stuff better than me since his 
	  connection code looked more sane than mine. Thanks alot!

2003-10-01  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/Makefile.am: 
	- added lm-queue.[ch]
	  
	* loudmouth/lm-queue.[ch]: copied and extended from GQueue.
	
	* loudmouth/lm-connection.c: 
	- Use LmQueue instead of GQueue